2003-09-22  Pavel Roskin  <proski@gnu.org>

	* glibcompat.c: New file for compatibility with older versions
	of glib.
	* glibcompat.h: Likewise.
	* Makefile.am: Add the new files SOURCES.
	* global.h: Include glibcompat.h.

	* menu.c (menu_scan_hotkey): Use g_strlcpy() to avoid undefined
	behavior when using strcpy() on overlapping strings.
	* profile.c (GetSetProfile): Likewise.
	* widget.c (button_scan_hotkey): Likewise.
	Found by Valgrind.

2003-09-13  Pavel Roskin  <proski@gnu.org>

	* dlg.c (dlg_replace_widget): Clean rewrite.  It was broken
	after eliminating Widget_Item.

	* menu.h: Return to keeping dialog id instead of a widget
	pointer for previous widget.  The widget can be replaced in the
	meantime.
	* dlg.c (dlg_select_by_id): New function, essentially a cleaner
	implementation of dlg_select_nth_widget().

	* dlg.h: Remove "first" field for dialogs and DLG_HAS_MENUBAR.
	* dlg.c (dlg_mouse_event): Remove menubar hack.
	* screen.c (do_panel_event): Redirect mouse events on the upper
	frame to the menubar if it's invisible.
	(panel_event): Don't repaint the panel after redirected events.

2003-09-12  Pavel Roskin  <proski@gnu.org>

	* screen.c (panel_event): Make sure that the panel is repainted
	after the event is processed.

	* hotlist.c (l_call): Fix incorrect calls to hotlist_callback().

	* dlg.h: Merge Widget_Item into Widget.  Massive adjustment.

	* main.c (setup_panels_and_run_mc): Use straight widget order in
	midnight_dlg.  Select initial panel by dlg_select_widget().

	* menu.h (WMenu): Save pointer to the previous widget, not its
	number.  Adjust all dependencies.
	* menu.c (menubar_finish): Restore focus on the saved widget.
	* dlg.c (dlg_item_number): Remove, it's unused now.
	(dlg_select_nth_widget): Likewise.

	* help.c (interactive_display): Use straight widget order.

	* complete.c (complete_engine): Don't need DLG_REVERSE.
	* widget.c (show_hist): Likewise.
	* view.c (view): Use straight widget order.
